menu nav responsive

--- a/index.html
+++ b/index.html
@@ -48,76 +48,77 @@
       </ul>
       </div>
   </nav>
-  <div class="relative  overflow-hidden">
-    <div class="max-w-7xl mx-auto">
-      <div class="relative z-10 pb-8  sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32">
-        <svg class="hidden lg:block absolute right-0 inset-y-0 h-full w-48 text-white transform translate-x-1/2"
-          fill="currentColor" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true">
-          
-        </svg>
-
-        <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
-          <div class="sm:text-center lg:text-left">
-            <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
-              <span class="block xl:inline">Bienvenido a</span>
-              <span class="block text-indigo-600 xl:inline">Soluciones para el Hogar</span>
-            </h1>
-            <p
-              class="mt-3 text-base text-gray-900 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0 info">
-              Somos una empresa  especializada en servicios de remodelacion y diseño para todos los espacios de tu hogar.
-
-Nosotros hacemos realidad tus proyectos. ya que contamos con expertos que te ayudaran a diseñar y ajustar tus ideas a la medida de tus espacios</p>
-          </div>
-        </main>
+  <div class="body">
+    <div class="relative  overflow-hidden">
+      <div class="max-w-7xl mx-auto">
+        <div class="relative z-10 pb-8  sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32">
+          <svg class="hidden lg:block absolute right-0 inset-y-0 h-full w-48 text-white transform translate-x-1/2"
+            fill="currentColor" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true">
+            
+          </svg>
+  
+          <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
+            <div class="sm:text-center lg:text-left">
+              <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
+                <span class="block xl:inline">Bienvenido a</span>
+                <span class="block text-indigo-600 xl:inline">Soluciones para el Hogar</span>
+              </h1>
+              <p
+                class="mt-3 text-base text-gray-900 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0 info">
+                Somos una empresa  especializada en servicios de remodelacion y diseño para todos los espacios de tu hogar.
+  
+  Nosotros hacemos realidad tus proyectos. ya que contamos con expertos que te ayudaran a diseñar y ajustar tus ideas a la medida de tus espacios</p>
+            </div>
+          </main>
+        </div>
+      </div>
+      <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2 logo_index">
+        <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full object-fit: cover;"
+          src="assets/img/logos/logo.jpg" alt="">
       </div>
     </div>
-    <br>
-    <br>
-    <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2 logo_index">
-      <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full object-fit: cover;"
-        src="assets/img/logos/logo.jpg" alt="">
-    </div>
-  </div>
-  <section>
-    <div class="img_container">
-      <img src="assets/img/trabajos/1548677776325.jpg" alt="Imagen1">
-      <img src="assets/img/trabajos/1548677776325.jpg" alt="Imagen1">
-      <img src="assets/img/trabajos/1548677776325.jpg" alt="Imagen1">
-    </div>
-  </section>
-  <div class="bg-gray-50">
-    <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
-      <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
-        <span class="block">Contactanos</span>
-        <span class="block text-indigo-600">Haz realidad la casa de tus sueños.</span>
-      </h2>
-      <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0 contact">
-        <a href="https://www.facebook.com/VentasSolucionesParaElHogar"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="48" height="48" viewBox="0 0 48 48"
-          style=" fill:#000000;">
-          <linearGradient id="awSgIinfw5_FS5MLHI~A9a_yGcWL8copNNQ_gr1" x1="6.228" x2="42.077" y1="4.896" y2="43.432"
-            gradientUnits="userSpaceOnUse">
-            <stop offset="0" stop-color="#0d61a9"></stop>
-            <stop offset="1" stop-color="#16528c"></stop>
-          </linearGradient>
-          <path fill="url(#awSgIinfw5_FS5MLHI~A9a_yGcWL8copNNQ_gr1)"
-            d="M42,40c0,1.105-0.895,2-2,2H8c-1.105,0-2-0.895-2-2V8c0-1.105,0.895-2,2-2h32	c1.105,0,2,0.895,2,2V40z">
-          </path>
-          <path
-            d="M25,38V27h-4v-6h4v-2.138c0-5.042,2.666-7.818,7.505-7.818c1.995,0,3.077,0.14,3.598,0.208	l0.858,0.111L37,12.224L37,17h-3.635C32.237,17,32,18.378,32,19.535V21h4.723l-0.928,6H32v11H25z"
-            opacity=".05"></path>
-          <path
-            d="M25.5,37.5v-11h-4v-5h4v-2.638c0-4.788,2.422-7.318,7.005-7.318c1.971,0,3.03,0.138,3.54,0.204	l0.436,0.057l0.02,0.442V16.5h-3.135c-1.623,0-1.865,1.901-1.865,3.035V21.5h4.64l-0.773,5H31.5v11H25.5z"
-            opacity=".07"></path>
-          <path fill="#fff"
-            d="M33.365,16H36v-3.754c-0.492-0.064-1.531-0.203-3.495-0.203c-4.101,0-6.505,2.08-6.505,6.819V22h-4v4	h4v11h5V26h3.938l0.618-4H31v-2.465C31,17.661,31.612,16,33.365,16z">
-          </path>
-        </svg></a>
-        <a href="wa.link/2v2h29">
-          <img src="./assets/img/icons/png-transparent-whatsapp-icon-logo-whatsapp-logo-text-instant-messaging-whatsapp-logo-png-thumbnail.svg" alt="">
-        </a>
+    <section>
+      <div class="img_container">
+        <img src="assets/img/trabajos/1548677776325.jpg" alt="Imagen1">
+        <img src="assets/img/trabajos/1548677776325.jpg" alt="Imagen1">
+        <img src="assets/img/trabajos/1548677776325.jpg" alt="Imagen1">
+      </div>
+    </section>
+    <div class="bg-gray-50">
+      <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
+        <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
+          <span class="block">Contactanos</span>
+          <span class="block text-indigo-600">Haz realidad la casa de tus sueños.</span>
+        </h2>
+        <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0 contact">
+          <a href="https://www.facebook.com/VentasSolucionesParaElHogar"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="48" height="48" viewBox="0 0 48 48"
+            style=" fill:#000000;">
+            <linearGradient id="awSgIinfw5_FS5MLHI~A9a_yGcWL8copNNQ_gr1" x1="6.228" x2="42.077" y1="4.896" y2="43.432"
+              gradientUnits="userSpaceOnUse">
+              <stop offset="0" stop-color="#0d61a9"></stop>
+              <stop offset="1" stop-color="#16528c"></stop>
+            </linearGradient>
+            <path fill="url(#awSgIinfw5_FS5MLHI~A9a_yGcWL8copNNQ_gr1)"
+              d="M42,40c0,1.105-0.895,2-2,2H8c-1.105,0-2-0.895-2-2V8c0-1.105,0.895-2,2-2h32	c1.105,0,2,0.895,2,2V40z">
+            </path>
+            <path
+              d="M25,38V27h-4v-6h4v-2.138c0-5.042,2.666-7.818,7.505-7.818c1.995,0,3.077,0.14,3.598,0.208	l0.858,0.111L37,12.224L37,17h-3.635C32.237,17,32,18.378,32,19.535V21h4.723l-0.928,6H32v11H25z"
+              opacity=".05"></path>
+            <path
+              d="M25.5,37.5v-11h-4v-5h4v-2.638c0-4.788,2.422-7.318,7.005-7.318c1.971,0,3.03,0.138,3.54,0.204	l0.436,0.057l0.02,0.442V16.5h-3.135c-1.623,0-1.865,1.901-1.865,3.035V21.5h4.64l-0.773,5H31.5v11H25.5z"
+              opacity=".07"></path>
+            <path fill="#fff"
+              d="M33.365,16H36v-3.754c-0.492-0.064-1.531-0.203-3.495-0.203c-4.101,0-6.505,2.08-6.505,6.819V22h-4v4	h4v11h5V26h3.938l0.618-4H31v-2.465C31,17.661,31.612,16,33.365,16z">
+            </path>
+          </svg></a>
+          <a href="wa.link/2v2h29">
+            <img src="./assets/img/icons/png-transparent-whatsapp-icon-logo-whatsapp-logo-text-instant-messaging-whatsapp-logo-png-thumbnail.svg" alt="">
+          </a>
+        </div>
       </div>
     </div>
   </div>
+  
   <script src="assets/js/main.js"></script>
 </body>
 </html>
