--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               d="M33.365,16H36v-3.754c-0.492-0.064-1.531-0.203-3.495-0.203c-4.101,0-6.505,2.08-6.505,6.819V22h-4v4	h4v11h5V26h3.938l0.618-4H31v-2.465C31,17.661,31.612,16,33.365,16z">
             </path>
           </svg></a>
-          <a href="wa.link/2v2h29">
+          <a href="https://wa.link/2v2h29">
             <img src="./assets/img/icons/png-transparent-whatsapp-icon-logo-whatsapp-logo-text-instant-messaging-whatsapp-logo-png-thumbnail.svg" alt="">
           </a>
         </div>
