--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="assets/img/icons/logo soluciones para el hogar.ico">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
