--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <a href="/">Servicios</a>
         </li>
         <li>
-          <a href="/">Quienes somos</a>
+          <a href="services.html">Quienes somos</a>
         </li>
         <li>
           <a href="/">Contacto</a>
