--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       <img src="assets/img/logos/logo.jpg" alt="logo" class="logo">
       <ul>
         <li>
-          <a href="/">Inicio</a>
+          <a href="https://oscaresteban0314.github.io/soluciones_para_el_hogar/">Inicio</a>
         </li>
         <li>
-          <a href="/">Servicios</a>
+          <a href="/services.html">Servicios</a>
         </li>
         <li>
-          <a href="services.html">Quienes somos</a>
+          <a href="">Quienes somos</a>
         </li>
         <li>
           <a href="/">Contacto</a>
