--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <a href="https://oscaresteban0314.github.io/soluciones_para_el_hogar/">Inicio</a>
         </li>
         <li>
-          <a href="/services.html">Servicios</a>
+          <a href="services.html">Servicios</a>
         </li>
         <li>
           <a href="">Quienes somos</a>
